# Simple-Rust-Compiler

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  main.cpp
test/: CMakeLists.txt  run-test.py
test/GlobalLowering/: global_lowering_driver_test.cpp  run-test.py  run_tests.py  struct_size_after_lowering_test.cpp
test/GlobalLowering/fixtures/: const_chain.ir  const_chain.src  function_with_params.ir  function_with_params.src  nested_functions.ir  nested_functions.src  nested_struct_dependency.ir  nested_struct_dependency.src  struct_and_array.ir  struct_and_array.src  struct_size_check.size  struct_size_check.src  two_dim_array.ir  two_dim_array.src
test/IRBuilder/: ir_builder_contract_test.cpp  ir_builder_fixture_catalog.cpp  ir_builder_fixture_runner.cpp  run_tests.py
test/IRBuilder/fixtures/: array_access.ir.expected  bitwise_ops.ir.expected  branch_compare.ir.expected  call_auto_name.ir.expected  function_multiple_returns.ir.expected  local_alloca_store.ir.expected  loop_and_call.ir.expected  loop_with_continue.ir.expected  loop_with_function_call.ir.expected  print_literal.ir.expected  runtime_builtins.ir.expected  simple_return.ir.expected  struct_usage.ir.expected
test/IRGen/: arithmetic_combo.rx  array_repeat.rx  basic_arithmetic.rx  function_context_default_state_test.cpp  if_short_circuit.rx  ir_program_driver.cpp  irgen_api_test.cpp  nested_block_return.rx  reference_ops.rx  run_tests.py  struct_method.rx
test/IRGen/programs/: 000_simple_add.rx  001_reference_basic.rx  002_struct_method_basic.rx  004_array_repeat.rx  005_array_auto_deref.rx  012_recursion.rx  014_reference_ops_mini.rx  015_struct_and_array.rx  016_struct_associated_function.rx  017_struct_method.rx  018_struct_method_auto_ref.rx  019_control_flow_mix.rx  020_struct_buffer_ops.rx  021_loop_return_combo.rx  022_array_len_builtin.rx  023_struct_method_chain.rx  023_unary_not.rx  024_aggregate_assign.rx  025_aggregate_matrix.rx  026_repeat_zero_memset.rx  027_const_array.rx  compare_and_loop.rx  const_usage.rx  loop_sum.rx  recursion.rx  struct_and_array.rx  struct_associated_function.rx
test/IRGen_with_runtime/: ir_program_driver.cpp  run_tests.py
test/TypeLowering/: declare_builtin_string_types_test.cpp  run_tests.py  type_lowering_api_test.cpp  type_lowering_behavior_test.cpp  type_size_test.cpp
test/const_eval/: test_const_eval.cpp
test/ir/: ir_builder_contract_test.cpp  ir_builder_fixture_catalog.cpp  ir_builder_fixture_runner.cpp  run_tests.py
test/ir/fixtures/: array_access.ir.expected  branch_compare.ir.expected  function_multiple_returns.ir.expected  local_alloca_store.ir.expected  loop_and_call.ir.expected  loop_with_function_call.ir.expected  print_literal.ir.expected  runtime_builtins.ir.expected  simple_return.ir.expected  struct_usage.ir.expected
test/lexer/: 3.in  4.in  5.in  6.in  test_lexer.cpp
test/parser/: 1.in  2.in  3.in  4.in  5.in  6.in  test_parser.cpp
test/runtime/: run_tests.py  runtime_driver.cpp
test/semantic-1/array1/: testcase_info.json
test/semantic-1/array2/: testcase_info.json
test/semantic-1/array3/: testcase_info.json
test/semantic-1/array4/: testcase_info.json
test/semantic-1/array5/: testcase_info.json
test/semantic-1/array6/: testcase_info.json
test/semantic-1/array7/: testcase_info.json
test/semantic-1/array8/: testcase_info.json
test/semantic-1/basic1/: testcase_info.json
test/semantic-1/basic10/: testcase_info.json
test/semantic-1/basic11/: testcase_info.json
test/semantic-1/basic12/: testcase_info.json
test/semantic-1/basic13/: testcase_info.json
test/semantic-1/basic14/: testcase_info.json
test/semantic-1/basic15/: testcase_info.json
test/semantic-1/basic16/: testcase_info.json
test/semantic-1/basic17/: testcase_info.json
test/semantic-1/basic18/: testcase_info.json
test/semantic-1/basic19/: testcase_info.json
test/semantic-1/basic2/: testcase_info.json
test/semantic-1/basic20/: testcase_info.json
test/semantic-1/basic21/: testcase_info.json
test/semantic-1/basic22/: testcase_info.json
test/semantic-1/basic23/: testcase_info.json
test/semantic-1/basic24/: testcase_info.json
test/semantic-1/basic25/: testcase_info.json
test/semantic-1/basic26/: testcase_info.json
test/semantic-1/basic27/: testcase_info.json
test/semantic-1/basic28/: testcase_info.json
test/semantic-1/basic29/: testcase_info.json
test/semantic-1/basic3/: testcase_info.json
test/semantic-1/basic30/: testcase_info.json
test/semantic-1/basic31/: testcase_info.json
test/semantic-1/basic32/: testcase_info.json
test/semantic-1/basic33/: testcase_info.json
test/semantic-1/basic34/: testcase_info.json
test/semantic-1/basic35/: testcase_info.json
test/semantic-1/basic36/: testcase_info.json
test/semantic-1/basic37/: basic37.rx  testcase_info.json
test/semantic-1/basic38/: testcase_info.json
test/semantic-1/basic39/: testcase_info.json
test/semantic-1/basic4/: testcase_info.json
test/semantic-1/basic40/: testcase_info.json
test/semantic-1/basic5/: testcase_info.json
test/semantic-1/basic6/: testcase_info.json
test/semantic_check/: test_semantic_check.cpp
test/test-llvm-lib/: test-llvm-lib.cpp
test/utils/: ast_dump.cpp
(+300 files in other folders)
